fixed all the alignment and background error

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,27 @@
-body
+.tala
 {
 	background-color: #ffbd33;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.notes
+{
+	margin: 0;
 }
 
 img
 {
 	border-radius: 50%;
-	display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10%;
+	height: 200px;
+	width: 200px;
+	align-self: center;
+	box-shadow: #0a8269 2px 5px 5px;
 }
-.notes
-{
-	text-align: center;
-	font-family: monospace;
+
+body{
+	margin: 0;
 }
